--- a/prs.client-solutions/src/app/user/user-list/user-list.component.html
+++ b/prs.client-solutions/src/app/user/user-list/user-list.component.html
@@ -8,20 +8,20 @@
     <table class="table table-striped table-sm">
         <thead>
             <tr>
-                <td>Id</td>
-                <td>Username</td>
+                <td><button (click)="selectColumn('id')" class="btn btn-link">Id</button></td>
+                <td><button (click)="selectColumn('id')" class="btn btn-link">Username</button></td>
                 <td>Password</td>
-                <td>Firstname</td>
-                <td>Lastname</td>
-                <td>Email</td>
-                <td>Phone</td>
+                <td><button (click)="selectColumn('id')" class="btn btn-link">Firstname</button></td>
+                <td><button (click)="selectColumn('id')" class="btn btn-link">Lastname</button></td>
+                <td><button (click)="selectColumn('id')" class="btn btn-link">Email</button></td>
+                <td><button (click)="selectColumn('id')" class="btn btn-link">Phone</button></td>
                 <td>IsReviewer</td>
                 <td>IsAdmin</td>
                 <td>Actions</td>
             </tr>
         </thead>
         <tbody>
-            <tr *ngFor="let u of user">
+            <tr *ngFor="let u of user | sort: sortColumn:sortAsc">
                 <td>{{u.id}}</td>
                 <td>{{u.username}}</td>
                 <td>{{u.password}}</td>
