--- a/prs.client-solutions/src/app/user/user-create/user-create.component.html
+++ b/prs.client-solutions/src/app/user/user-create/user-create.component.html
@@ -36,11 +36,11 @@
                 </tr>
                 <tr>
                     <td>IsReviewer</td>
-                    <td><input [(ngModel)]="user.isReviewer"></td>
+                    <td><input [(ngModel)]="user.isReviewer" type="checkbox"></td>
                 </tr>
                 <tr>
                     <td>IsAdmin</td>
-                    <td><input [(ngModel)]="user.isAdmin"></td>
+                    <td><input [(ngModel)]="user.isAdmin" type="checkbox"></td>
                 </tr>
             </tbody>
         </table>
