--- a/prs.client-solutions/src/app/user/user-detail/user-detail.component.html
+++ b/prs.client-solutions/src/app/user/user-detail/user-detail.component.html
@@ -36,11 +36,11 @@
                 </tr>
                 <tr>
                     <td>IsReviewer</td>
-                    <td><input [(ngModel)]="user.isReviewer" readonly></td>
+                    <td><input [(ngModel)]="user.isReviewer" type="checkbox" readonly></td>
                 </tr>
                 <tr>
                     <td>IsAdmin</td>
-                    <td><input [(ngModel)]="user.isAdmin" readonly></td>
+                    <td><input [(ngModel)]="user.isAdmin" type="checkbox" readonly></td>
                 </tr>
             </tbody>
         </table>
