--- a/prs.client-solutions/src/app/user/user-login/user-login.component.html
+++ b/prs.client-solutions/src/app/user/user-login/user-login.component.html
@@ -7,7 +7,7 @@
             </tr>
             <tr>
                 <td>Password</td>
-                <td><input [(ngModel)]="password"></td>
+                <td><input [(ngModel)]="password" type="password"></td>
             </tr>
             <tr>
                 <td colspan="2" class="text-danger fw-bold fst-italic">{{message}}</td>
