--- a/prs.client-solutions/src/app/request/request-list/request-list.component.html
+++ b/prs.client-solutions/src/app/request/request-list/request-list.component.html
@@ -34,7 +34,7 @@
                     <span> | </span>
                     <a routerLink="/request/edit/{{r.id}}">Edit</a>
                     <span> | </span>
-                    <a routerLink="/request/Lines/{{r.id}}">Lines</a>
+                    <a routerLink="/request/line/{{r.id}}">Lines</a>
                 </td>
             </tr>
         </tbody>
