--- a/prs.client-solutions/src/app/request/request-item/request-item.component.html
+++ b/prs.client-solutions/src/app/request/request-item/request-item.component.html
@@ -1,1 +1,62 @@
-<p>request-item works!</p>
+<div id="component">
+    <header>
+        <app-menubar></app-menubar>
+        <span id="pageTitle">{{pageTitle}}</span>
+        <span> | </span>
+          </header>
+    <table class="table table-striped table-sm" *ngIf="request">
+        <thead>
+            <tr>
+                <th>Id</th>
+                <th>Description</th>
+                <th>Rejection Reason</th>
+                <th>Status</th>
+                <th>Total</th>
+                <th>Username</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>{{request.id}}</td>
+                <td>{{request.description}}</td>
+                <td>{{request.rejectionReason}}</td>
+                <td>{{request.status}}</td>
+                <td>{{request.total | currency}}</td>
+                <td>{{request.user?.username}}</td>
+            </tr>
+        </tbody>
+    </table>
+    <table class="table table-striped table-sm">
+        <thead>
+            <tr>
+                <th>Id</th>
+                <th>Product</th>
+                <th>Price</th>
+                <th>Quantity</th>
+                <th>Line Total</th>
+            </tr>
+        </thead>
+        <tbody *ngIf="request && request.requestLines">
+            <tr *ngFor="let rl of request.requestLines">
+                <td>{{rl.id}}</td>
+                <td>{{rl.product?.name}}</td>
+                <td>{{rl.product?.price | currency}}</td>
+                <td>{{rl.quantity}}</td>
+                <td>{{rl.quantity * (rl.product === null ? 0 : rl.product.price)}}</td>
+                </tr>
+        </tbody>
+    </table>
+        <button (click)="approve(request)" class="btn btn-success">Approve</button>
+        <span> | </span>
+        <button (click)="reject()" class="btn btn-danger">Reject</button>
+        <span> | </span>
+        <span>
+        <form>
+            <label for="Reason for Reject"></label>
+            <input type="text" name="Rejection Reason">
+            <span> | </span>
+            <button (click)="rejectRequest(request)" class="btn btn-danger">Verify Reject</button>
+        </form>
+    </span>
+</div>
+
