--- a/prs.client-solutions/src/app/request/request-review/request-review.component.html
+++ b/prs.client-solutions/src/app/request/request-review/request-review.component.html
@@ -2,14 +2,31 @@
     <header>
         <app-menubar></app-menubar>
         <span id="pageTitle">{{pageTitle}}</span>
-        <span> | </span>
-        <a routerLink="/request/create">Create Request</a>
     </header>
     <table class="table table-striped table-sm">
         <thead>
             <tr>
-                <th></th>
+                <td>Id</td>
+                <td>Description</td>
+                <td>Justification</td>
+                <td>Status</td>
+                <td>Total</td>
+                <td>User</td>
+                <td id="actions">Actions</td>
             </tr>
         </thead>
+        <tbody>
+            <tr *ngFor="let r of request">
+                <td>{{r.id}}</td>
+                <td>{{r.description}}</td>
+                <td>{{r.justification}}</td>
+                <td>{{r.status}}</td>
+                <td>{{r.total}}</td>
+                <td>{{r.userId}}</td>
+                <td>
+                    <a routerLink="/request/item/{{r.id}}">Review</a>                  
+                </td>
+            </tr>
+        </tbody>
     </table>
-</div>>
+</div>
