requestline-create & requestline-edit | corrected errors in request | show message when incorrect user login

--- a/prs.client-solutions/src/app/product/product-create/product-create.component.html
+++ b/prs.client-solutions/src/app/product/product-create/product-create.component.html
@@ -19,6 +19,10 @@
                     <td><input [(ngModel)]="product.name"></td>
                 </tr>
                 <tr>
+                    <td>Unit</td>
+                    <td><input [(ngModel)]="product.unit"></td>
+                </tr>
+                <tr>
                     <td>Price</td>
                     <td><input [(ngModel)]="product.price"></td>
                 </tr>
