--- a/prs.client-solutions/src/app/product/product-list/product-list.component.html
+++ b/prs.client-solutions/src/app/product/product-list/product-list.component.html
@@ -14,7 +14,8 @@
                 <th>Price</th>
                 <th>Unit Description</th>
                 <th>Photo Path</th>
-                <th>Vendor Id</th>
+                <th>Vendor</th>
+                <th>Actions</th>
             </tr>
         </thead>
         <tbody>
