--- a/prs.client-solutions/src/app/requestline/requestline-edit/requestline-edit.component.html
+++ b/prs.client-solutions/src/app/requestline/requestline-edit/requestline-edit.component.html
@@ -19,7 +19,7 @@
                 </tr>
                 <tr>
                     <td>Quantity</td>
-                    <td><input [(ngModel)]="requestline.quantity"></td>
+                    <td><input [(ngModel)]="requestline.quantity" type="number"></td>
                 </tr>
             </tbody>
         </table>
