--- a/prs.client-solutions/src/app/request/request-line/request-line.component.html
+++ b/prs.client-solutions/src/app/request/request-line/request-line.component.html
@@ -30,7 +30,7 @@
             </tr>
         </tbody>
     </table>
-    <a routerLink="/requestline/create">Create</a>
+    <a *ngIf="request" routerLink="/requestline/create/{{request.id}}">Create</a>
     <table class="table table-striped table-sm">
         <thead>
             <tr>
@@ -50,7 +50,7 @@
                 <td>{{rl.quantity}}</td>
                 <td>{{rl.quantity * (rl.product === null ? 0 : rl.product.price)}}</td>
                 <td>
-                    <a routerLink="/orderline/edit/{{rl.id}}">Change</a>
+                    <a routerLink="/requestline/edit/{{rl.id}}">Change</a>
                     <span> | </span>
                     <button (click)="remove(rl.id)" class="">Remove</button>
                 </td>
