added inclusions in Requests and Products to allow Vendor Name and User Username to appear rather than foreign key Id

--- a/prs.client-solutions/src/app/product/product-detail/product-detail.component.html
+++ b/prs.client-solutions/src/app/product/product-detail/product-detail.component.html
@@ -32,7 +32,7 @@
                 </tr>
                 <tr>
                     <td>Vendor Id</td>
-                    <td><input [(ngModel)]="product.vendorId" readonly></td>
+                    <td><input [(ngModel)]="product.vendor!.name" readonly></td>
                 </tr>
             </tbody>
         </table>
