--- a/prs.client-solutions/src/app/product/product-list/product-list.component.html
+++ b/prs.client-solutions/src/app/product/product-list/product-list.component.html
@@ -26,7 +26,7 @@
                 <td>{{p.price}}</td>
                 <td>{{p.unit}}</td>
                 <td>{{p.photoPath}}</td>
-                <td>{{p.vendorId}}</td>
+                <td>{{p.vendor?.name}}</td>
                 <td>
                     <a routerLink="/product/detail/{{p.id}}">View</a>
                     <span> | </span>
