--- a/prs.client-solutions/src/app/request/request-list/request-list.component.html
+++ b/prs.client-solutions/src/app/request/request-list/request-list.component.html
@@ -28,7 +28,7 @@
                 <td>{{r.deliveryMode}}</td>
                 <td>{{r.status}}</td>
                 <td>{{r.total}}</td>
-                <td>{{r.userId}}</td>
+                <td>{{r.user.username}}</td>
                 <td>
                     <a routerLink="/request/detail/{{r.id}}">View</a>
                     <span> | </span>
